Switch parent to cui-java-parent and apply pre-commit formatting
- Change parent from cui-parent-pom to cui-java-parent for proper Java
  project support (jar plugin, javadoc, pre-commit profile, sonar, etc.)
- Remove redundant maven-jar-plugin configuration (inherited from parent)
- Add maven.compiler.release=21 and automatic module name property
- Apply pre-commit profile: license headers, OpenRewrite formatting,
  Java 21 migrations, import ordering, CUI logging standards

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>