@@ -1,3 +1,18 @@
+/*
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.reference.pages.components.demo;
 
 import de.cuioss.jsf.api.application.message.MessageProducer;
@@ -49,7 +64,7 @@ public class TagDataProvider implements Serializable {
     @Serial
     private static final long serialVersionUID = -3513331142570721330L;
 
-    private static final CuiLogger log = new CuiLogger(TagDataProvider.class);
+    private static final CuiLogger LOGGER = new CuiLogger(TagDataProvider.class);
 
     @Inject
     MessageProducer messageProducer;
@@ -116,7 +131,7 @@ public class TagDataProvider implements Serializable {
     }
 
     public List<String> getFirstNames() {
-        log.info("Available firstnames : {}", firstNames);
+        /*~~(TODO: INFO needs LogRecord. Suppress: // cui-rewrite:disable CuiLogRecordPatternRecipe)~~>*/LOGGER.info("Available firstnames : %s", firstNames);
         return firstNames;
     }
 
@@ -127,7 +142,7 @@ public class TagDataProvider implements Serializable {
      *                     element
      */
     public void disposeListener(final ModelPayloadEvent disposeEvent) {
-        log.info("Dispose : {}", disposeEvent.getModel());
+        /*~~(TODO: INFO needs LogRecord. Suppress: // cui-rewrite:disable CuiLogRecordPatternRecipe)~~>*/LOGGER.info("Dispose : %s", disposeEvent.getModel());
         firstNames.remove(disposeEvent.getModel());
         messageProducer.addGlobalMessage("Disposed=" + disposeEvent.getModel(), FacesMessage.SEVERITY_INFO);
     }
@@ -158,7 +173,7 @@ public class TagDataProvider implements Serializable {
     public void validate(final FacesContext context, final UIComponent component, final Object value) {
         if (null != value) {
             final var items = (Set<ConceptKeyType>) value;
-            final Set<String> blacklist = immutableSet(firstNames.get(0), firstNames.get(1));
+            final Set<String> blacklist = immutableSet(firstNames.getFirst(), firstNames.get(1));
             if (items.stream().anyMatch(c -> blacklist.contains(c.getIdentifier()))) {
                 throw new ValidatorException(new FacesMessage(FacesMessage.SEVERITY_ERROR,
                     "Don't add any of: " + blacklist, "Don't add any of: " + blacklist));
