@@ -1,3 +1,18 @@
+/*
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.reference.pages;
 
 import de.cuioss.test.juli.LogAsserts;
@@ -22,8 +37,8 @@ class ConfigDocuBeanTest {
         final var result = underTest.getDefaultConfigSources();
         assertNotNull(result);
         assertEquals(2, result.size());
-        assertNotNull(result.get(0).getPath());
-        assertNotNull(result.get(0).getLang());
+        assertNotNull(result.getFirst().getPath());
+        assertNotNull(result.getFirst().getLang());
         LogAsserts.assertNoLogMessagePresent(TestLogLevel.ERROR, ConfigDocuBean.class);
     }
 }
